# dvmn-bot

./: README.md  bot_logger.py  main.py  pyproject.toml  requirements.txt
local/: local.py  Закладки.py
