[tool.poetry]
name = "dvmn-bot"
version = "1.0.1"
description = ""
authors = ["Mark Raid <marki.raid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
python-telegram-bot = "^13.11"
retrying = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
